--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-addons-css-transition-group": "^15.0.7",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scroll": "^1.8.4",
+    "react-transition-group": "^4.4.2",
     "sass": "^1.49.7"
   },
   "devDependencies": {
