--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/react-addons-css-transition-group": "^15.0.7",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scroll": "^1.8.4",
-    "react-transition-group": "^4.4.2",
+    "react-spring": "^9.4.3",
     "sass": "^1.49.7"
   },
   "devDependencies": {
+    "@react-spring/types": "^9.4.3",
     "@types/node": "17.0.16",
     "@types/react": "17.0.39",
     "@types/react-scroll": "^1.8.3",
