--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "sass": "^1.49.7"
   },
   "devDependencies": {
+    "@react-spring/parallax": "^9.4.3",
     "@react-spring/types": "^9.4.3",
+    "@react-spring/web": "^9.4.3",
     "@types/node": "17.0.16",
     "@types/react": "17.0.39",
     "@types/react-scroll": "^1.8.3",
